--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                 </div>
             </li>
             <li class="dropdown">
-                    <a href="#">Fonte</a>
+                    <a class="dropdownlink" href="#">Fonte</a>
                     <div class="dropdown-menu">
-                        <a href="#">Serif</a>
-                        <a href="#">Sans-Serif</a>
-                        <a href="#">Mono</a>
+                        <a class="dropdownlink" href="#">Serif</a>
+                        <a class="dropdownlink" href="#">Sans-Serif</a>
+                        <a class="dropdownlink" href="#">Mono</a>
                     </div>
                     <img src="./images/icon-arrow-down.svg" class="arrow-down" alt="flecha para baixo" >
             </li>   
@@ -61,48 +61,30 @@
         <div class="palavra">
             <div class="escrita">
                 <div class="palavra-digitada-div">
-                    <p class="palavra-digitada">Palavra</p>
+                    <p class="palavra-digitada" id="palavra-digitada"></p>
                 </div>
-                <div class="fonetica-palavra">
-                    <p>/"fonetica/</p>
-                </div>
-            </div>
-            <div class="som">
-                <div class="som-palavra-btn">
-                    <img src="./images/icon-play.svg" class="som" alt="icone som" >
-                </div>
-            </div>
         </div>
-
-        
             <div class="explicacao">
                 <div class="tipo-palavra">
-                    <p>Tipo</p>
+                    <p></p>
                 </div>
                     <div class="significado">
-                        <p class="significado">Significado</p>
+                        <p class="significado"></p>
                         <ul class="lista-significados">
-                            <li class="item-significado">
-                                exemplo
-                            </li>
-                            <li class="item-significado">
-                                exemplo
-                            </li>
-                            <li class="item-significado">
-                                exemplo
-                            </li>
                         </ul>
                     </div>
                     <div class="sinonimos">
-                        <p>Sinônimos</p>
+                        <p></p>
                         <ul class="lista-sinonimos">
-                            <li class="item-sinonimo"> exemplos</li>
+                            <li class="item-sinonimo"> 
+                                <p id="sinonimo"></p>
+                            </li>
                         </ul>
                     </div>
             </div>
             <div class="source">
-                <p class="source-text">Fonte</p>
-                <p class="link-source"> www.teste.com</p>
+                <p class="source-text"></p>
+                <p class="link-source"></p>
             </div>
     </section>
 </body>
@@ -110,5 +92,6 @@
 <footer class="rodape">
         <p class="info">Coded by Gabriella Borges<a></a></p>
     </footer> 
+    <script src="themes.js"></script>
   <script src="main.js"></script>
 </html>
