--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Dictionary web app">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="styles/base.css"/>
   <link rel="stylesheet" href="styles/dropdown.css"/>  
   <link rel="stylesheet" href="styles/explicacao.css"/>
@@ -19,51 +18,52 @@
 </head>
 
 <body>
-<div class="container" id="container">
-    <nav class="nav">
-        <ul class="lista-nav">
-            <li class="logo"> 
-                <div class="icone-dicionario">
-                    <img src="./images/logo.svg" alt="simbolo dicionario" class="dicionario">
-                </div>
-            </li>
-            <li class="dropdown">
-                    <a class="dropdownlink" href="#">Fonte</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdownlink" href="#">Serif</a>
-                        <a class="dropdownlink" href="#">Sans-Serif</a>
-                        <a class="dropdownlink" href="#">Mono</a>
+    <div class="container" id="container">
+        <nav class="nav">
+            <ul class="lista-nav">
+                <li class="logo"> 
+                    <div class="icone-dicionario">
+                        <img src="./images/logo.svg" alt="simbolo dicionario" class="dicionario">
                     </div>
-                    <img src="./images/icon-arrow-down.svg" class="arrow-down" alt="flecha para baixo" >
-            </li>   
-            <li>  
-                <div class="mode">
-                    <div class="toggle-container">
-                        <input type="checkbox" id="toggle" class="toggle-input">
-                        <label for="toggle" class="toggle-label"></label>
-                    </div>
-                <img src="./images/icon-moon.svg" alt="lua" class="dark-mode">
-                </div> 
-            </li>
-        </ul>
-    </nav>
-    <div class="pesquisa">
-        <div class="espaco-pesquisa">
-            <input class="input-pesquisa" id="inp-word" placeholder="Type your word here...">
-            <button class="search-btn" id="botao-pesquisa">
-                <img class="lupa" src="./images/icon-search.svg" alt="lupa de pesquisa" >
-            </button>
-            
+                </li>
+                <li class="dropdown">
+                        <a class="dropdownlink" href="#">Font</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdownlink" href="#">Serif</a>
+                            <a class="dropdownlink" href="#">Sans-Serif</a>
+                            <a class="dropdownlink" href="#">Mono</a>
+                        </div>
+                        <img src="./images/icon-arrow-down.svg" class="arrow-down" alt="flecha para baixo" >
+                </li>   
+                <li>  
+                    <div class="mode">
+                        <div class="toggle-container">
+                            <input type="checkbox" id="toggle" class="toggle-input">
+                            <label for="toggle" class="toggle-label"></label>
+                        </div>
+                    <img src="./images/icon-moon.svg" alt="lua" class="dark-mode">
+                    </div> 
+                </li>
+            </ul>
+        </nav>
+        <div class="pesquisa">
+            <div class="espaco-pesquisa">
+                <input class="input-pesquisa" id="inp-word" placeholder="Type your word here...">
+                <button class="search-btn" id="botao-pesquisa">
+                    <img class="lupa" src="./images/icon-search.svg" alt="lupa de pesquisa" >
+                </button>
+                
+            </div>
         </div>
-    </div>
 
-    <section class="resultado">   
-    </section>
+        <section class="resultado">   
+        </section>
+    </div>
 </body>
-</div> 
-<footer class="rodape">
+ 
+<!--<footer class="rodape">
         <p class="info">Coded by Gabriella Borges<a></a></p>
-    </footer> 
+    </footer>--> 
     <script src="themes.js"></script>
   <script src="main.js"></script>
 </html>
