feat: font change; retactor: sound function;

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 <li class="dropdown">
                         <a class="dropdownlink" href="#">Font</a>
                         <div class="dropdown-menu">
-                            <a class="dropdownlink" href="#">Serif</a>
-                            <a class="dropdownlink" href="#">Sans-Serif</a>
-                            <a class="dropdownlink" href="#">Mono</a>
+                            <a class="dropdownlink" id ="serif" href="#">Serif</a>
+                            <a class="dropdownlink" id = "sans-serif" href="#">Sans-Serif</a>
+                            <a class="dropdownlink" id="monospace" href="#">Monospace</a>
                         </div>
                         <img src="./images/icon-arrow-down.svg" class="arrow-down" alt="flecha para baixo" >
                 </li>   
@@ -63,7 +63,8 @@
  
 <!--<footer class="rodape">
         <p class="info">Coded by Gabriella Borges<a></a></p>
-    </footer>--> 
+    </footer>-->
+    <script src="fonts.js"></script>
     <script src="themes.js"></script>
   <script src="main.js"></script>
 </html>
